--- a/04_Lastname_Firstname.Rmd
+++ b/04_Lastname_Firstname.Rmd
@@ -30,7 +30,7 @@ When you are finished with the assignment:
 4. Locate the Rmd file on github and click on the SHA link for the file
 5. Paste the url of the resulting page into Canvas to submit your assignment.
 
-Your assignment must compile on a different computer as long as the saspath is set correctly for that machine. This means you will need to use a local file path when you read the data in via R. 
+Your assignment must compile on a different computer as long as the saspath is set correctly for that machine. This means you will need to use a local file path when you read the data in via R (and SAS). So when you specify your file path, it should look something like "General_Payment_Data_Sample.csv" with no "/home/xxx/Documents" or "C:\\" in front of it.  
 
 ### About the Data
 
